--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,25 +10,27 @@ homepage: https://github.com/AdnanKhan45/flutter_story_editor/blob/main/lib/flut
 
 environment:
   sdk: '>=3.3.0 <4.0.0'
-  flutter: ">=1.17.0"
+  # flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  image_cropper: ^5.0.1
-  video_player: ^2.8.6
-  video_trimmer: ^3.0.1
-  video_thumbnail: ^0.5.3
-  hsv_color_pickers: ^0.3.0
+
+  image_cropper: ^11.0.0
+  video_player: ^2.10.0
+  video_trimmer: ^5.0.0
+  get_thumbnail_video: ^0.7.3
+  hsv_color_pickers: ^0.4.0
   perfect_freehand: ^2.3.2
 
-  file_picker: ^8.0.1
+  file_picker: ^10.3.8
   path: ^1.9.0
   path_provider: ^2.1.3
   flutter_keyboard_visibility: ^6.0.0
   vector_math: ^2.1.4
   font_awesome_flutter: ^10.7.0
   material_design_icons_flutter: ^7.0.7296
+  package_info_plus: ^9.0.0
 
 dev_dependencies:
   flutter_test:
@@ -41,6 +43,7 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
 
+  uses-material-design: true
   # To add assets to your package, add an assets section, like this:
   assets:
     - assets/images/
@@ -91,6 +94,9 @@ flutter:
     - family: Pacifico
       fonts:
         - asset: assets/fonts/pacifico/Pacifico-Regular.ttf
+
+  generate: true
+
   #
   # For details regarding fonts in packages, see
   # https://flutter.dev/custom-fonts/#from-packages
